force-app/base/main/default/objects/Inbound_Listing_Staging__c/Inbound_Listing_Staging__c.object-meta.xml
<CustomObject>
    <description>Inbound inbox. Nothing external writes to the catalogue directly - it lands here first, and a promoter decides whether it is good enough to become a listing.</description>
    <label>Inbound Listing Staging</label>
    <nameField>
        <displayFormat>STG-{00000000}</displayFormat>
        <label>Staging Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Listing Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>