force-app/base/main/default/objects/Inbound_Listing_Staging__c/fields/Catalogue_Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Catalogue_Item_Code__c</fullName>
    <label>Catalogue Item Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>