force-app/base/main/default/objects/Inbound_Listing_Staging__c/fields/Processed_At__c.field-meta.xml
<CustomField>
    <fullName>Processed_At__c</fullName>
    <label>Processed At</label>
    <type>DateTime</type>
</CustomField>