force-app/base/main/default/objects/Inbound_Listing_Staging__c/fields/Source_Key__c.field-meta.xml
<CustomField>
    <fullName>Source_Key__c</fullName>
    <externalId>true</externalId>
    <label>Source Key</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>